Bug 700867. Don't allow rotation when we're drawing a BasicThebesLayer that needs to be drawn atomically. r=tnikkel